MFB: Fixed bug #28800 (strings beginning with "inf" improperly converted).